# cambot

./: .gitignore  .gitmodules
app/: .eslintrc.yaml  package-lock.json  package.json  webpack.config.js
app/src/: App.tsx  actions.ts  api.ts  index.tsx  key-bindings.ts  reducer.ts  rotation-types.ts  sagas.ts  store.ts  types.ts
app/src/components/: App.tsx  JogPanel.tsx  MoveToPanel.tsx  NumStepsSelector.tsx  PositionDisplay.tsx  RotationDials.tsx  RotationTable.tsx  StepBaseButtons.tsx  StepHeadButtons.tsx  SteppingSpeedSlider.tsx
firmware/: CMakeLists.txt
firmware/lib/linalg/: CMakeLists.txt
firmware/lib/lohmann_json/: CMakeLists.txt
firmware/main/: Actuator.cpp  Actuator.hpp  Actuators.cpp  Actuators.hpp  App.cpp  App.hpp  CMakeLists.txt  Kconfig  Kinematics.cpp  Kinematics.h  StepperGroupTd6560.cpp  StepperGroupTd6560.hpp  Steppers.cpp  Steppers.hpp  additional_response_types.hpp  cambot_main.cpp  math_utils.hpp  stepper-common.hpp  vecs.hpp
